--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <section class="about-section">
-        <div class="about_sub-section"></div>
+        <div class="diagonal_background-section"></div>
         <div class="about-content">
           <div class="my-img">
             <img
